--- a/main.tex
+++ b/main.tex
@@ -70,6 +70,12 @@
     \column{0.5}
     \block{\badge{7} Blocktitle7}{
     ...
+    \begin{tikztable}[optional caption]
+        \begin{tabular}{c}
+            ... % table here
+        \end{tabular}
+    \end{tikztable}
+    }
     }
 \end{columns}
 
