Add new columns and subcolumns structure in main.tex

--- a/main.tex
+++ b/main.tex
@@ -79,6 +79,28 @@
     }
 \end{columns}
 
+\begin{columns}
+    \column{0.5}
+    \begin{subcolumns}
+        \subcolumn{0.5}
+        \block{SubBlock1}{
+        ...
+        }
+        % For stacking into another row. Don't use \subcolumn{...}
+        \block{SubBlockRow 1}{
+        ...
+        }
+        \subcolumn{0.5}
+        \block{SubBlock2}{
+        ...
+        }
+        % For stacking into another row. Don't use \subcolumn{...}
+        \block{SubBlockRow 2}{
+        ...
+        }
+    \end{subcolumns}
+\end{columns}
+
 \block{References}{
     % \printbibliography[heading=none]
 }
