--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 % Infos
 \title{Title Here}
 \institute{School of ..., University of ...}
-\author{..., \underline{Damodar Rajbhandari}, ...}
+\author{..., \underline{FullName}, ...}
 % \titlegraphic{\includegraphics[scale=0.12]{logo.pdf}}
 
 
